--- a/src/UI/Card.module.css
+++ b/src/UI/Card.module.css
@@ -1,6 +1,7 @@
 .card{
     background-color: white;
     padding:20px;
+    margin:20px;
     width:60%;
     border-radius: 10px;
     box-shadow: 10px;
