--- a/src/UI/Button.module.css
+++ b/src/UI/Button.module.css
@@ -4,6 +4,7 @@
     font-size: large;
     padding:10px;
     border: 1px solid brown;
+    box-sizing: border-box;
     border-radius: 20px;
     cursor:pointer;
 }
